--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_staggered_grid_view: ^0.4.0
+  animate_do: ^3.1.2
+  photo_view: ^0.14.0
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
