some changes of zoom functions

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   animate_do: ^3.1.2
   photo_view: ^0.14.0
   modal_bottom_sheet: ^2.1.2
+  easy_image_viewer: ^1.2.1
 
 dev_dependencies:
   flutter_test:
